--- a/Buoi_1/Bai1.ipynb
+++ b/Buoi_1/Bai1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwcQlfBCBoFJ4HwUYlsRWV",
+      "authorship_tag": "ABX9TyPHtGXVCCfZElidpfzs093u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
         "id": "Iepd_D_7oKdg",
         "outputId": "3cd1c955-21fa-4021-b25f-423fa52b4594"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "id": "aY4N9jQvok8Q",
         "outputId": "8c6ea758-abab-4901-a394-d95918eab930"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "9p2KefwZp3_q",
         "outputId": "e7d139eb-32db-433d-cdd5-bde76bc26757"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "srXfhZx7qYlg",
         "outputId": "5affd396-bde0-494d-f7fc-e9477deac9dd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
         "id": "glKedA16rPJI",
         "outputId": "440c3b8e-1cf4-4872-ea44-cc5f99b810a6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +200,7 @@
         "id": "IZ-tQBoorTFp",
         "outputId": "a1e39693-79ac-42d1-da73-a425056c4f20"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,6 +211,36 @@
             "C = 3\n",
             "x1 =  4.875\n",
             "x2 =  -1.375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def giaithua(n):\n",
+        "  gt = 1\n",
+        "  for i in range(2, n+1):\n",
+        "    gt = gt*i\n",
+        "  return gt\n",
+        "a = int(input(\"Nhap gia tri cua n: \"))\n",
+        "print(\"N! = \", giaithua(a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HpbD4xdHeq6y",
+        "outputId": "ee6406fc-9f63-4eb3-92bf-287f399ed753"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhap gia tri cua n: 5\n",
+            "N! =  120\n"
           ]
         }
       ]
