--- a/Buoi_1/Bai1.ipynb
+++ b/Buoi_1/Bai1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHtGXVCCfZElidpfzs093u",
+      "authorship_tag": "ABX9TyM+XeSV7n4vpo40e6Yk7c3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -241,6 +241,132 @@
           "text": [
             "Nhap gia tri cua n: 5\n",
             "N! =  120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bài 2:\n",
+        "P = int(input(\"Nhập số tiền gốc mà bạn có: \"))\n",
+        "r = float(input(\"Nhập số phần trăm lãi hàng năm mà bạn nhận được: \"))\n",
+        "n = int(input(\"Nhập số năm bạn gửi: \"))\n",
+        "A = float(P*(1+(r/100)*n))\n",
+        "print(\"Số tiền lãi bạn nhận được sau %d năm là: %.02f\" %(n, A))\n",
+        "a = int(input(\"Số tiền mà bạn kì vọng sẽ nhận được là: \"))\n",
+        "t = float((((a/P)-1)/r)*100)\n",
+        "print(\"Thời gian để bạn nhận được số tiền kì vọng là: %f\" %t)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Asd_-ZfDiHYl",
+        "outputId": "4337a190-f651-49c4-daf2-ee2d9e311ce4"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập số tiền gốc mà bạn có: 10000000\n",
+            "Nhập số phần trăm lãi hàng năm mà bạn nhận được: 5.1\n",
+            "Nhập số năm bạn gửi: 10\n",
+            "Số tiền lãi bạn nhận được sau 10 năm là: 15100000.00\n",
+            "Số tiền mà bạn kì vọng sẽ nhận được là: 50000000\n",
+            "Thời gian để bạn nhận được số tiền kì vọng là: 78.431373\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bài 3:\n",
+        "n = int(input(\"Nhập số nguyên n: \"))\n",
+        "print(\"Hệ cơ số 16: \", hex(n))\n",
+        "print(\"Hệ cơ số 8: \", oct(n))\n",
+        "print(\"Hệ cơ số 2: \", bin(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YUohE-bpnM9M",
+        "outputId": "82998450-73d2-477d-e105-ce85db002edc"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập số nguyên n: 16\n",
+            "Hệ cơ số 16:  0x10\n",
+            "Hệ cơ số 8:  0o20\n",
+            "Hệ cơ số 2:  0b10000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bài 4:\n",
+        "a = int(input(\"Nhập số nguyên a: \"))\n",
+        "b = int(input(\"Nhập số nguyên b: \"))\n",
+        "c = float(pow(a, 1/b))\n",
+        "print(\"Căn bậc %d của %d là: %f\" %(b,a, c))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XDQksnTUn1Ws",
+        "outputId": "54af4b0c-1d65-4e1e-8023-2781cd68ae97"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập số nguyên a: 4\n",
+            "Nhập số nguyên b: 2\n",
+            "Căn bậc 2 của 4 là: 2.000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bài 5:\n",
+        "X = int(input(\"Nhập số nguyên X: \"))\n",
+        "X_str = str(X)\n",
+        "c = int(len(X_str))\n",
+        "chu_so_dau_tien = str(X_str[0])\n",
+        "print(\"Trong X có %d chữ số\" %c)\n",
+        "print(\"Chữ số đầu của X là %c\" %chu_so_dau_tien)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tdCDDqGvpKiM",
+        "outputId": "36f76fce-3ed8-4031-b663-8e1938a81aad"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập số nguyên X: 1000\n",
+            "Trong X có 4 chữ số\n",
+            "Chữ số đầu của X là 1\n"
           ]
         }
       ]
